--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
         "webpack": "^3.10.0"
     },
     "devDependencies": {
+        "@types/chai": "^3.5.2",
         "@types/express": "^4.11.0",
         "@types/mocha": "^2.2.48",
-        "@types/chai": "^3.5.2",
         "@types/morgan": "^1.7.35",
         "@types/node": "~6.0.60",
         "@types/nodemailer": "^4.3.2",
+        "@types/should": "^13.0.0",
         "@types/supertest": "^2.0.4",
         "gulp": "^3.9.1",
         "mocha": "^5.0.0",
         "nodemon": "^1.14.11",
+        "should": "^13.2.1",
         "supertest": "^3.0.0",
         "ts-node": "^4.0.2",
         "tslint": "^5.8.0",
