--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "test": "mocha"
     },
     "dependencies": {
+        "body-parser": "^1.18.2",
         "core-js": "^2.4.1",
         "express": "^4.16.2",
         "morgan": "^1.9.0",
@@ -21,6 +22,7 @@
         "webpack": "^3.10.0"
     },
     "devDependencies": {
+        "@types/body-parser": "^1.16.8",
         "@types/chai": "^3.5.2",
         "@types/express": "^4.11.0",
         "@types/mocha": "^2.2.48",
