--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
         "core-js": "^2.4.1",
         "express": "^4.16.2",
         "morgan": "^1.9.0",
+        "mysql": "^2.15.0",
         "nodemailer": "^4.4.2",
         "npm-run-all": "^4.1.2",
         "promise": "^8.0.1",
+        "promise-mysql": "^3.2.1",
         "ts-loader": "^3.3.1",
         "webpack": "^3.10.0"
     },
     "devDependencies": {
+        "@types/mysql": "^2.15.4",
         "@types/body-parser": "^1.16.8",
         "@types/chai": "^3.5.2",
         "@types/express": "^4.11.0",
