--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "npm-run-all -p start:server start:build",
         "start:server": "nodemon ./dist/dev.bundle.js --watch \"./dist\"",
         "start:build": "node ./webpack/build-dev",
-        "test": "mocha"
+        "test": "mocha --watch-extensions ts --watch -R min"
     },
     "dependencies": {
         "body-parser": "^1.18.2",
@@ -20,16 +20,18 @@
         "npm-run-all": "^4.1.2",
         "promise": "^8.0.1",
         "promise-mysql": "^3.2.1",
+        "reflect-metadata": "^0.1.12",
         "ts-loader": "^3.3.1",
+        "typeorm": "0.2.6",
         "webpack": "^3.10.0"
     },
     "devDependencies": {
-        "@types/mysql": "^2.15.4",
         "@types/body-parser": "^1.16.8",
         "@types/chai": "^3.5.2",
         "@types/express": "^4.11.0",
         "@types/mocha": "^2.2.48",
         "@types/morgan": "^1.7.35",
+        "@types/mysql": "^2.15.4",
         "@types/node": "~6.0.60",
         "@types/nodemailer": "^4.3.2",
         "@types/should": "^13.0.0",
