--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
     "compilerOptions": {
         "module": "commonjs",
         "noImplicitAny": true,
-        "outDir": "tmp",
-        "target": "ES6",
+        "outDir": "./dist",
+        "target": "es5",
         "sourceMap": true,
-        "types": ["jasmine"],
-        "typeRoots": ["node_modules/@types/"]
-    },
-    "exclude": ["node_modules", "test"]
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "typeRoots": ["node_modules/@types/"],
+        "lib": ["es2017", "dom"]
+    }
 }
